[gd_scene load_steps=6 format=2]

[ext_resource path="res://Basic Sprites/yellow16x16.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Common/Drops/AmmoDrop.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="CircleShape2D" id=2]
radius = 128.0

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[node name="AmmoDrop" type="KinematicBody2D"]
z_index = 4
z_as_relative = false
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource( 2 )

[node name="PlayerPickUp" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPickUp"]
shape = SubResource( 3 )

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_exited"]
[connection signal="body_entered" from="PlayerPickUp" to="." method="_on_PlayerPickUp_body_entered"]
